zellij-client/src/old_config_converter/unit/snapshots/zellij_client__old_config_converter__old_layout__convert_layout_test__properly_convert_layout_example_3.snap
---
source: zellij-client/src/old_config_converter/./unit/convert_layout_tests.rs
assertion_line: 90
expression: "format!(\"{}\", kdl_config)"
---
layout {
    default_tab_template {
        children
    }
    tab split_direction="Vertical" {
        pane split_direction="Vertical" {
            pane size="50%" split_direction="Horizontal" {
                pane size="50%"
                pane command="htop" size="50%"
            }
            pane command="htop" size="50%"
        }
    }
}
